--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Hellocloud</title>
+    <title>LIANG Tao</title>
   </head>
 
   <body>
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Hello Cloud</p>
+        <p>Welcome to LIANG Tao's Page</p>
       </section>
     </div>
 
